--- a/style.css
+++ b/style.css
@@ -88,17 +88,19 @@ height: 90%;
 }
 
 .container {
+  width: 100%;
+  position: relative;
+}
+
+.container > .sub-container {
   display: flex;
   width: 80%;
   padding: 20px;
   box-sizing: border-box;
-  background-color: white;
-  box-shadow: 0 3px 8px 3px rgba(0, 0, 0, 0.3);
-  margin: 20px 150px 0 150px;
+  margin: 20px auto 0;
 }
 
 .information-course{
-  background-color:white;
   width: 70%;
  padding: 20px;
   margin-left: 0;    
@@ -118,7 +120,7 @@ height: 90%;
 
 .breadcrumb-link {
   text-decoration: none;
-  color: black;
+  color: white;
   font-weight:700;
 }
 
@@ -132,17 +134,15 @@ height: 90%;
 }
 
 .display-3{
-  background-color: #0B0742;
   padding: 0px 10px 0px 10px;
   color: white;
-  box-shadow: 0 5px 10px 4px rgba(0, 0, 0, 0.2);
+  
 }
 
 .information-course h1{
   font-size: 2.5rem;
   font-weight: 300;
   line-height: 1.2;
-  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.2) ;
   text-align: center;
 }
 
@@ -280,11 +280,11 @@ height: 90%;
 
 
 .paycourse{
-   width: 30%;
+  width: 30%;
   padding: 20px;
   background-color: white;
   box-sizing: border-box;
-  margin: 0 60px 0 0;  
+  margin: 0 auto;  
 }
 
 .paycourse > div {
@@ -295,10 +295,10 @@ height: 90%;
 }
 
 .paycourse img{
- width: 90%;
+ width: 100%;
   height: 150px; 
   object-fit: cover;
-  padding: 0px 90px 0px 30px;
+  padding: 0 auto;
  
 }
 .bg-primary {
@@ -464,9 +464,7 @@ input[type="button"].btn-block {
   box-shadow:0 4px 8px rgba(0, 0, 0, 0.1);
   justify-items: center;
 }
-.video-content h2{
-  margin: 0px 100px 20px 200px;
-}
+
 .video .course-content {
   width: 50%;
   margin: 30px auto;
@@ -474,9 +472,11 @@ input[type="button"].btn-block {
   border: black solid 2px;
 }
 
-.video-content .course-content h2 {
+.video-content  h2 {
+  width: 100%;
   font-size: 24px;
-  margin-bottom: 5px;
+  margin: 5px auto;
+ text-align: center;
 }
 
 .video-content .course-content p {
@@ -498,11 +498,10 @@ input[type="button"].btn-block {
   cursor: pointer;
   font-size: 16px;
   color: #2d2f31;
+  gap: 10px;
 }
 
-.section-header:hover {
-  font-weight: bolder;
-}
+
 
 .section-body {
   display: none;
@@ -529,10 +528,6 @@ input[type="button"].btn-block {
   box-sizing: border-box;
 }
 
-.video{
-  width: 50%;
-  height: fit-content;
-}
 
 
 .another-course {
