--- a/viewcourse/style.css
+++ b/viewcourse/style.css
@@ -9,6 +9,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     background-color: #ffffff;
+
 }
 
 .header {
@@ -19,8 +20,7 @@ body {
   padding: 12px 30px;
   background-color:white;
   height: 80px;
-  box-shadow: 0 5px 8px 5px rgba(0, 0, 0, 0.3);;
-
+  box-shadow: 0 5px 8px 5px rgba(0, 0, 0, 0.3);
 }
 .header i:hover{
 color: white;  
@@ -514,6 +514,8 @@ input[type="button"].btn-block {
   justify-content: space-between;
   padding: 5px 0;
   font-size: 14px;
+  border: #1c1d1f solid 0.5px;
+
 }
 
 .section-body li a {
